cmake_minimum_required(VERSION 3.16)
project(c C)

set(CMAKE_C_STANDARD 99)

add_executable(1 interhorse/Q001.c)
add_executable(8 interhorse/Q008.c)
add_executable(9 interhorse/Q009.c)
add_executable(11 interhorse/Q011.c)
add_executable(15 interhorse/Q015.c)
add_executable(16 interhorse/Q016.c)
add_executable(18 interhorse/Q018.c)
add_executable(19 interhorse/Q019.c)
add_executable(20 interhorse/Q020.c)
add_executable(21 interhorse/Q021.c)
add_executable(22 interhorse/Q022.c)
add_executable(24 interhorse/Q024.c)
add_executable(25 interhorse/Q025.c)
add_executable(26 interhorse/Q026.c)